# run_code_rmcp

./: Cargo.toml  Dockerfile  LICENSE-APACHE  NOTICE  README.md
.cursor/rules/: code-execution.mdc  dependencies.mdc  error-handling.mdc  examples.mdc  fixtures-guide.mdc  mcp-integration.mdc  project-overview.mdc  python-execution.mdc
.devcontainer/: devcontainer.json
examples/: cursor_mcp_config.json  mcp_client.js  mcp_client_example.js  test_mcp.sh  test_python.py
fixtures/: cow_say_hello.js  import_axios_example.js  import_deno_std_example.js  import_esm_module_example.js  import_jsr_example.js  import_local_module_example.js  import_lodash_example.js  rfunction_js_test3.js  rfunction_python.py  rfunction_test1.js  rfunction_test2.py  test_js.js  test_js_params.js  test_python.py  test_python_logging.py  test_python_params.py  test_python_simple.py  test_python_types.py  test_ts.ts  test_ts_params.ts
src/: app_error.rs  error.rs  lib.rs  main.rs  mcp.rs  python_imports.pest  script_runner.rs  warm_up.rs
src/cache/: code_file_cache.rs  mod.rs
src/deno_runner/: common_runner.rs  js_runner.rs  mod.rs  ts_runner.rs
src/mcp/: mcp_server.rs  mod.rs
src/model/: code_run_model.rs  mod.rs  tool_params.rs
src/python_runner/: mod.rs  python_runner.rs
src/python_runner/dependencies/: mod.rs  python_dependencies.rs
src/templates/: js_template_es.js  js_template_normal.js  python_template.py  ts_template.ts
src/tests/: js_tests.rs  mod.rs  python_tests.rs  ts_tests.rs
