[package]
name = "run_code_rmcp"
description = "云函数服务,执行JS/TS/Python语言代码,脚本必须有约定的函数名称(handler/main),会调用约定的函数名称结果和日志返回."
version = "0.0.31"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nuwax-ai/run_code_rmcp"
homepage = "https://nuwax.com/"
readme = "README.md"
default-run = "run_code_rmcp"

[dependencies]
tokio = { version = "1.47", features = [
    "fs",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "io-util",
    "process",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
rmcp = { version = "0.5", features = [
    "server",
    "client",
    "transport-sse-server",
    "transport-sse-client",
    "transport-streamable-http-client",
    "transport-streamable-http-server",
    "transport-child-process",
    "transport-io",
    "reqwest",
] }
tempfile = "3.20"
regex = "1.9"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
pest = { version = "2.8", features = ["pretty-print"] }
pest_derive = "2.8"
blake3 = "1.8"
pin-project = "1.1"
libc = "0.2"
once_cell = "1.21"
schemars = "1.0"
async-trait = "0.1"

[[bin]]
name = "script_runner"
path = "src/script_runner.rs"
